--- a/first_web_socket/pubspec.yaml
+++ b/first_web_socket/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  hooks_riverpod: ^0.14.0+3
+  network_info_plus: ^1.0.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
